--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=gb2112">
     <script type="text/javascript" src="js\jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js\main.js"></script>
-    <link rel="stylesheet" type="text/css" href="css\main.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>CraftTweakerTool</title>
 </head>
 
